Eureka in place